# chat-app

./: CMakeLists.txt  app.json  version.txt
include/: configReader.hh  versionReader.hh
include/routes/: baseRoute.hh  routeRegistrar.hh
include/utils/: dbConnection.hh
src/: main.cc
src/routes/: baseRoute.cc  routeRegistrar.cc
src/utils/: configReader.cc  dbConnection.cc  versionReader.cc
